--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -50,8 +50,11 @@
     </header>
     <main>
         <div class="main-area">
-            <div class="directory-container">
-                
+            <h1 class="abel-text direct-info">Our Member Directory</h1>
+
+            <div class="switch-box"><img class="active-switch grid-view-icon" src="images/grid-btn.png" alt="grid view icon"><img class ="list-view-icon" src="images/list-btn.png" alt="list view icon"></div>
+            <div class="directory-container grid-directory">
+                <!-- JS -->
             </div>
             <h4 class="last-visit abel-text">Last Visit: <span id="visit-string"></span></h4>
         </div>
